Fixed HTML/CSS portions

--- a/src/index.html
+++ b/src/index.html
@@ -15,34 +15,54 @@
 
 <body>
     <div>
-        <h2>This will run JavaScript using script tags!</h2>
-        <button onclick='alertFunction()'>Click me!</button>
-    </div>
-
-    <section>
-        <div class='float'>
-            <h1>Here is a list of links</h1>
-            <ul>
-                <li><a href='https://www.google.com/'>This will link you to Google</a></li>
-                <br />
-                <li><a href='https://stackoverflow.com/'>This will link you to Stack Overflow</a></li>
-                <br />
-                <li><a href='https://twitter.com/?lang=en'>This will link you to Twitter</a></li>
-                <br />
-            </ul>
+        <div>
+            <h2>This will run JavaScript using script tags!</h2>
+            <button onclick='alertFunction()'>Click me!</button>
         </div>
-    </section>
 
-    <div class='float_right'>
-        <h1>Video Element</h1>
-        <video width="320" height="240" controls>
-            <source src="../waterfall.mp4" type="video/mp4">
-        </video>
-        <br />
-        <h1>Audio Element</h1>
-        <audio controls>
-            <source src="../CompStart.mp3" type="audio/mp3"> Your browser does not support the audio element.
-        </audio>
+        <section>
+            <div class='float'>
+                <h1>Here is a list of links</h1>
+                <ul>
+                    <li><a href='https://www.google.com/'>This will link you to Google</a></li>
+                    <br />
+                    <li><a href='https://stackoverflow.com/'>This will link you to Stack Overflow</a></li>
+                    <br />
+                    <li><a href='https://twitter.com/?lang=en'>This will link you to Twitter</a></li>
+                    <br />
+                </ul>
+            </div>
+        </section>
+
+        <div class='float_right'>
+            <h1>Video Element</h1>
+            <video width="320" height="240" controls>
+                <source src="../waterfall.mp4" type="video/mp4">
+            </video>
+            <br />
+            <h1>Audio Element</h1>
+            <audio controls>
+                <source src="../CompStart.mp3" type="audio/mp3"> Your browser does not support the audio element.
+            </audio>
+        </div>
+
+        <div>
+            <h1>Boxes with padding and box-sizing properties</h1>
+            <div class='box1'>
+                Without Padding
+            </div>
+            <br />
+            <div class='box2'>
+                With Padding
+            </div>
+            <div class='box3'>
+                This box floats right.
+            </div>
+            <br />
+            <div class='box4'>
+                Text-Effects
+            </div>
+        </div>
     </div>
 
 </body>
