--- a/src/index.html
+++ b/src/index.html
@@ -63,6 +63,15 @@
                 Text-Effects
             </div>
         </div>
+        <br />
+        <div class='flex_wrap'>
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+            <div>4</div>
+            <div>5</div>
+            <div>6</div>
+        </div>
     </div>
 
 </body>
